--- a/views/error.ejs
+++ b/views/error.ejs
@@ -24,7 +24,6 @@
     display: flex;
     align-items: center;
     text-align: center;
-    justify-content: space-between;
     text-align: center;
     flex-direction: column;
     height: 100vh;">
@@ -33,7 +32,7 @@
         </div>
 
         <div class="text">
-            <h3 style="margin: 10px 0;font-size:2rem; ">
+            <h3 style="margin: 10px 0;font-size:2rem;margin-top: 5rem;">
                 <%= message %>
             </h3>
             <p style="margin: 0; ">Application de partage de position en temps réel</p>
