--- a/views/map.ejs
+++ b/views/map.ejs
@@ -63,8 +63,19 @@
 
             $(document).ready(function() {
 
-                const icon = "https://www.vhv.rs/dpng/d/429-4295429_google-maps-pin-png-google-maps-marker-transparent.png";
+                const icon = {
+                    url: "/icons/user.png", // url
+                    scaledSize: new google.maps.Size(40, 40), // scaled size
+                    origin: new google.maps.Point(0, 0), // origin
+                    anchor: new google.maps.Point(0, 0) // anchor
+                };
+
                 driverPosition = new google.maps.LatLng(document.getElementById('positionLat').value, document.getElementById('positionLon').value);
+
+                map = new google.maps.Map(document.getElementById("map"), {
+                    zoom: 4,
+                    center: driverPosition
+                });
 
                 marker = new google.maps.Marker({
                     position: driverPosition,
@@ -72,12 +83,6 @@
                     icon: icon,
                     title: "User",
                 });
-
-                map = new google.maps.Map(document.getElementById("map"), {
-                    zoom: 4,
-                    center: driverPosition
-                });
-                map.panTo(driverPosition);
 
             });
 
