update map file

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -66,14 +66,14 @@
                 const icon = {
                     url: "/icons/user.png", // url
                     scaledSize: new google.maps.Size(40, 40), // scaled size
-                    origin: new google.maps.Point(0, 0), // origin
-                    anchor: new google.maps.Point(0, 0) // anchor
+                    //origin: new google.maps.Point(0, 0), // origin
+                    //anchor: new google.maps.Point(0, 0) // anchor
                 };
 
                 driverPosition = new google.maps.LatLng(document.getElementById('positionLat').value, document.getElementById('positionLon').value);
 
                 map = new google.maps.Map(document.getElementById("map"), {
-                    zoom: 4,
+                    zoom: 16,
                     center: driverPosition
                 });
 
